--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
- <h1>Welcome to the Todo-app</h1>
- <p> if you're a new user <a href="/users/new"> sign up </a></p>
+ <h1 clas="Home-title">Welcome to the Todo-app</h1>
+
+ <h3 class="Home-authenticate">
+  if you're a new user <%= link_to "sign up here", new_user_path %>
+  </h3>
+  
+ <h3 class="Home-authenticate"> 
+ if you're a existing user <%= link_to "sign in here", new_sessions_path %>
+ </h3>
