--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
   </head>
 
   <body>
+    
 
+    <% if @current_user %>
+      <p class="UserHeader"> welcome <%= @current_user.first_name %> </p>
+    <%end%>
     <%= yield %>
      
   </body>
