--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,25 +1,51 @@
-.Form-Section{
-    margin-bottom: 30 px;
+.User-Section{
+	
+	width:30%;
    
-
+   margin-top: 3%;
+   margin-left: 0;
+	
+}
+.Form-Section{
+    
+   
+	
+	 
 }
 .User-Title{
-    margin-bottom: 40 px;
+    /*margin-bottom: 0;*/
+    margin-top: 40%;
+         margin-left: 37%;
+
+      margin-bottom: 0;
+      padding-bottom: 0;
+
 }
 
 .Form-Input{
-    padding: 8 px;
+    
     font-size: 20 px;
+    width: 60%;
+    padding: 3.5px;
 }
 .Form-Label{
 color:gray;
-margin-bottom: 6 px;
+/*margin-bottom: 6 px;*/
+height: 20px;
 }
 .Form-submit{
     
-    padding: 10 px;
+    margin-top: 5%;
+   
     font-size: 20 px;
-    background-color: blue;
-    border: 0;
-    border-radius: 4 px;
+    width: 50px;
+    height: 25px;
+    background-color: #4ece4e;
+    
+   border-radius: 4px;
+    border:0;
+    width:72px;
+    height:32px;
+    font-size: 14px;
+    color:#fff;
 }
