--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
     
 
     <% if @current_user %>
-      <p class="UserHeader"> welcome <%= @current_user.first_name %> </p>
+      <p class="UserHeader"> welcome <%= @current_user.first_name %>!
+          <%= link_to "sign-out" ,destroy_session_path, method:"delete"%>      
+      </p>
+    
     <%end%>
     <%= yield %>
      
