--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -15,7 +15,7 @@
             <%= render partial: "todo-section", locals:{
                 
             section_title: "Overdue",
-            todos: Todo.overdue,
+            todos: @todos.overdue,
             show_due_date: false,
             hide_completed: true
         
@@ -24,7 +24,7 @@
            <%= render partial: "todo-section", locals:{
             
             section_title: "Due Today",
-            todos: Todo.due_today,
+            todos: @todos.due_today,
             show_due_date: true,
             hide_completed: false
 
@@ -34,7 +34,7 @@
             <%= render partial: "todo-section", locals:{
                 
             section_title: "Due Later",
-            todos: Todo.due_later,
+            todos: @todos.due_later,
             show_due_date: true,
             hide_completed: false
             
