--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,12 @@
       <p class="UserHeader"> welcome <%= @current_user.first_name %>!
           <%= link_to "sign-out" ,destroy_session_path, method:"delete"%>      
       </p>
-    
+    <%end%>
+
+    <%if flash[:error] %>
+      <p class="Flash-error"> 
+        <%= flash[:error] %>
+      </p>
     <%end%>
     <%= yield %>
      
